--- a/artists.html
+++ b/artists.html
@@ -20,13 +20,12 @@
 		      <a class="nav-item nav-link" href="./history.html">Storia</a>
 		      <a class="nav-item nav-link" href="./subgenres.html">Sottogeneri</a>
 		      <a class="nav-item nav-link active" href="./artists.html">Artisti</a>
-		      <a class="nav-item nav-link" href="./about.html">About</a>
 		    </div>
 		  </div>
 		</nav>
 		
 		<div class="container">
-			<div class="row">
+			<div class="row" id="first-row">
 				<div class="col">
 					<div class="accordion" id="accordionExample">
 					  <div class="card">
@@ -37,7 +36,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c1" class="collapse show" aria-labelledby="h1" data-parent="#accordionExample">
+					    <div id="c1" class="collapse" aria-labelledby="h1" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Reputato uno dei padri fondatori del jazz moderno, Charlie Parker fu uno dei musicisti più innovativi e influenti dell'intera storia del jazz. Dagli anni cinquanta ad oggi, il mondo della musica jazz (e non solo) si è trovato a dover fare i conti con l'influenza dell'opera di Parker. Molti musicisti trascrivevano e copiavano nota per nota i suoi assoli. Dean Benedetti registrò su acetato molti assoli di Bird, soprattutto relativi ai concerti degli anni 1947 e 1948, che fanno parte delle registrazioni "The Complete Dean Benedetti Recordings of Charlie Parker" (a cura di Phil Schaap e Bob Porter), pubblicato dall'etichetta statunitense Mosaic Records. Legioni di sassofonisti imitarono il suo stile e il suo modo di suonare. Come importanza, la figura di Parker è paragonabile forse solo a quelle di Louis Armstrong e Miles Davis: tutti e tre stabilirono quali erano i canoni definitivi dei loro strumenti per decenni interi, fecero compiere veri e propri balzi in avanti nella comprensione, nell'ideazione e nell'esecuzione musicale, e ben pochi non si lasciarono influenzare dai loro stili. In particolare la figura carismatica di Charlie Parker contribuì enormemente alla fortuna del sassofono contralto, spingendo sempre più appassionati verso questo strumento. La musica di Parker, considerata un tempo solo l'espressione artistica di una minoranza rivoluzionaria all'interno della comunità afroamericana, continua a oltre cinquant'anni dalla nascita a essere studiata e ad influenzare la musica americana. </p>
 					      </div>
@@ -53,7 +52,7 @@
 					      </h5>
 					    </div>
 
-					    <div id="c2" class="collapse show" aria-labelledby="h2" data-parent="#accordionExample">
+					    <div id="c2" class="collapse" aria-labelledby="h2" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Tra i più grandi sassofonisti della storia del jazz, è stato tra i capisaldi del genere (in particolare di quello modale) degli anni sessanta, chiudendo il periodo del bop e aprendo quello del free jazz. Il pensiero musicale di Coltrane ha influenzato numerosi musicisti a venire.
 											Ebbe grande influenza sia sul sax tenore che sul sax soprano per i sassofonisti dagli anni 1970, nonostante alcune critiche negative. Lo stile di Coltrane nella sua prima fase, precedente al 1964, influenzò Wayne Shorter, Joe Henderson ed anche Steve Grossman e Dave Liebman, che avevano suonato nel gruppo di Elvin Jones. Per la sua fase free jazz suonò spesso insieme ad Archie Shepp e il suo erede dopo la sua scomparsa fu Pharoah Sanders. Sanders partecipò insieme a McCoy Tyner e Roy Haynes al disco A Tribute to John Coltrane - Blues For Coltrane, prodotto dalla Impulse! Records.
@@ -70,7 +69,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c3" class="collapse show" aria-labelledby="h3" data-parent="#accordionExample">
+					    <div id="c3" class="collapse" aria-labelledby="h3" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Duke Ellington è considerato uno dei massimi compositori del '900, oltre le etichette di genere; grande è stata e rimane la sua influenza su generazioni di jazzisti: dalle orchestre bianche di Woody Herman e Charlie Barnet a Thelonious Monk e Charles Mingus, e poi le avanguardie più underground di Sun Ra e Archie Shepp. Grande è il debito nei confronti del duca anche da parte dell'esule africano Dollar Brand, Muhal Richard Abrams e di Anthony Davis. </p>
 					      </div>
@@ -85,7 +84,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c4" class="collapse show" aria-labelledby="h4" data-parent="#accordionExample">
+					    <div id="c4" class="collapse" aria-labelledby="h4" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Miles Davis fu e resta famoso sia come strumentista dalle sonorità inconfondibilmente languide e melodiche, sia per il suo atteggiamento innovatore (peraltro mai esente da critiche), sia per la sua figura di personaggio pubblico. Fu il suo un caso abbastanza raro in campo jazzistico: fu infatti uno dei pochi jazzmen in grado di realizzare anche commercialmente il proprio potenziale artistico e forse l'ultimo ad avere anche un profilo di star dell'industria musicale. Una conferma della sua poliedrica personalità artistica fu la sua (postuma) ammissione, nel marzo 2006, alla Rock and Roll Hall of Fame; un ulteriore riconoscimento di un talento che influenzò tutti i generi di musica popolare della seconda metà del XX secolo. </p>
 					      </div>
@@ -100,7 +99,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c5" class="collapse show" aria-labelledby="h5" data-parent="#accordionExample">
+					    <div id="c5" class="collapse" aria-labelledby="h5" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Reputato uno dei padri fondatori del jazz moderno, Charlie Parker fu uno dei musicisti più innovativi e influenti dell'intera storia del jazz. Dagli anni cinquanta ad oggi, il mondo della musica jazz (e non solo) si è trovato a dover fare i conti con l'influenza dell'opera di Parker. Molti musicisti trascrivevano e copiavano nota per nota i suoi assoli. Dean Benedetti registrò su acetato molti assoli di Bird, soprattutto relativi ai concerti degli anni 1947 e 1948, che fanno parte delle registrazioni "The Complete Dean Benedetti Recordings of Charlie Parker" (a cura di Phil Schaap e Bob Porter), pubblicato dall'etichetta statunitense Mosaic Records. Legioni di sassofonisti imitarono il suo stile e il suo modo di suonare. Come importanza, la figura di Parker è paragonabile forse solo a quelle di Louis Armstrong e Miles Davis: tutti e tre stabilirono quali erano i canoni definitivi dei loro strumenti per decenni interi, fecero compiere veri e propri balzi in avanti nella comprensione, nell'ideazione e nell'esecuzione musicale, e ben pochi non si lasciarono influenzare dai loro stili. In particolare la figura carismatica di Charlie Parker contribuì enormemente alla fortuna del sassofono contralto, spingendo sempre più appassionati verso questo strumento. La musica di Parker, considerata un tempo solo l'espressione artistica di una minoranza rivoluzionaria all'interno della comunità afroamericana, continua a oltre cinquant'anni dalla nascita a essere studiata e ad influenzare la musica americana. </p>
 					      </div>
@@ -115,7 +114,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c6" class="collapse show" aria-labelledby="h6" data-parent="#accordionExample">
+					    <div id="c6" class="collapse" aria-labelledby="h6" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Ha suonato molto spesso nel suo Trio. Viene considerato uno dei maggiori esponenti di musica jazz dopo la seconda guerra mondiale.
 											L'uso di un'armonia totalmente diversa, la reinterpretazione personale di molti standard jazz, dei block chords, quasi "cantando" le linee melodiche, hanno influenzato molti dei pianisti jazz successivi, riformando l'armonia jazz.
@@ -132,7 +131,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c7" class="collapse show" aria-labelledby="h7" data-parent="#accordionExample">
+					    <div id="c7" class="collapse" aria-labelledby="h7" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Charles Mingus studiò violoncello e poi contrabbasso con maestri jazz e classici, approfondendo contemporaneamente la conoscenza dei grandi del jazz (Ellington soprattutto, ma anche Art Tatum, con il quale suonò agli inizi), senza mai trascurare i compositori europei, da Debussy a Stravinskij. Mingus seppe essere un musicista e un compositore atemporale, capace di guardare agli sviluppi del jazz con la stessa attenzione con cui guardò, sempre, a quanto era accaduto prima che egli apparisse sulla scena. Mingus fu sempre spinto da un inesauribile dinamismo a inserire nella sua musica sia le radici del jazz, sia Ellington, il bop parkeriano e la scuola cool di Lennie Tristano, il rivoluzionario hard bop e lo stesso free jazz, fondendo in modo mirabile tutti questi linguaggi, con un risultato finale al cui equilibrio poteva giungere solo un compositore eclettico, inquieto e lungimirante come egli fu. </p>
 					      </div>
@@ -147,7 +146,7 @@
 					        </button>
 					      </h5>
 					    </div>
-					    <div id="c8" class="collapse show" aria-labelledby="h8" data-parent="#accordionExample">
+					    <div id="c8" class="collapse" aria-labelledby="h8" data-parent="#accordionExample">
 					      <div class="card-body">
 					        <p>Tuttora considerato come il più grande batterista di tutti i tempi per tecnica, velocità, potenza e creatività. Autodidatta immensamente dotato, Buddy Rich è stato fonte di ispirazione per molti batteristi del passato ma anche per batteristi più attuali come Neil Peart, Dave Weckl, Dennis Chambers, Steve Smith, Virgil Donati, Vinnie Colaiuta, Steve Gadd, John Bonham, Ian Paice, Keith Moon, Tré Cool, Jojo Mayer, Topper Headon, Carl Palmer ed anche Billy Cobham ha dichiarato che Rich è stato uno dei suoi modelli fondamentali. Secondo la leggenda del jazz Gene Krupa, Rich era "Il più grande batterista che abbia mai preso fiato". La sua carriera durò sette decenni. </p>
 					      </div>
